test/compile_failure/28_incompatible_initializer.c
// EXPECT-ERRORS: 1
// EXPECT: incompatible initializer
int main() {
    int value = 1;
    int *pointer = value;
    return 0;
}
